--- a/yaml/cookbook/new_t2_compass/process_middle_table_mt.yml
+++ b/yaml/cookbook/new_t2_compass/process_middle_table_mt.yml
@@ -1629,7 +1629,7 @@ mt_daily_env:
             drop_stash: true
 
 
-    - name: knight_detail
+    - name: mt_knight_detail
       sync_result: true
       cooks:
         - fetch_dataset:
